--- a/src/rhack-image-helper.css
+++ b/src/rhack-image-helper.css
@@ -8,6 +8,7 @@ rh-button {
 
 rh-icon {
   --rh-icon-size: var(--rh-size-icon-03, 32px);
+  animation: pulse 2s infinite;
 }
 
 details {
@@ -79,4 +80,18 @@ textarea {
   display: flex;
   gap: var(--rh-space-md, 8px);
   flex-direction: column;
+}
+
+@keyframes pulse {
+  0% {
+      transform: scale(1);
+  }
+
+  50% {
+      transform: scale(1.1);
+  }
+
+  100% {
+      transform: scale(1);
+  }
 }
