--- a/demo/styles/styles.css
+++ b/demo/styles/styles.css
@@ -1,7 +1,25 @@
-@layer reset, tokens, fonts, typography;
+
+@layer reset, tokens, fonts, base-typography, extra-typography, page, admin;
 
 @import url(https://ux.redhat.com/styles/reset.css) layer(reset);
 @import url(https://ux.redhat.com/assets/packages/@rhds/tokens/css/global.css)
 layer(tokens);
 @import url(https://ux.redhat.com/styles/fonts.css) layer(fonts);
-@import url(https://ux.redhat.com/styles/typography.css) layer(typography);
+@import url(https://ux.redhat.com/styles/typography.css) layer(base-typography);
+
+@layer extra-typography {
+  p {
+    margin-block-end: 1rem;
+  }
+}
+
+@layer page {
+  .rh-band--layout {
+    padding: 2rem;
+  }
+}
+
+/* @layer admin {
+  [contenteditable] {
+  }
+} */
