--- a/demo/styles/styles.css
+++ b/demo/styles/styles.css
@@ -8,14 +8,45 @@ layer(tokens);
 @import url(https://ux.redhat.com/styles/typography.css) layer(base-typography);
 
 @layer extra-typography {
+  h1 {
+    margin-block: 0 1rem;
+    font-size: 36px;
+    line-height: 1.3;
+  }
+
+  h3 {
+    margin-block: 2rem 1rem;
+    font-size: 24px;
+    line-height: 1.3;
+  }
+
   p {
     margin-block-end: 1rem;
+    line-height: 1.5 !important;
+  }
+
+  .ck-content blockquote, blockquote {
+    margin-block: 2rem;
+    border-left-color: #e00 !important;
+    font-style: normal !important;
+  }
+
+  .ck-content blockquote p {
+    font-size: 18px !important;
   }
 }
 
 @layer page {
   .rh-band--layout {
     padding: 2rem;
+  }
+
+  .rh-band-container {
+    max-width: 1170px;
+  }
+
+  [data-rh-background="black"] {
+    color: #fff;
   }
 }
 
